<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:paddingHorizontal="4pt">

        <TextView
                android:id="@+id/subAddressText"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/nearest_place"
                android:textColor="@color/colorPrimaryFill"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/distanceText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5sp"
                android:gravity="center_vertical"
                android:text="@string/distance"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

        <ImageButton
                android:id="@+id/rightArrowButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:src="@drawable/chevron_right_circle_outline"
                android:tint="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4pt">

        <TextView
                android:id="@+id/addressTextHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryFill"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryFill"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/openingHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/openingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimaryFill"
                android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>