<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/TopBar"
            android:elevation="4dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/appVersionHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version_info"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/appVersionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/colorDarkText"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/dataProviderHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_data_provider_info"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/dataProviderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/colorDarkText"
                    android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/lastUpdateHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_data_updated_info"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/lastUpdateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4pt"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/colorDarkText"
                    android:textSize="16sp" />
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/toilet"
                android:id="@+id/imageView" android:background="@color/colorPrimaryDark"/>
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="?android:attr/listDivider"
        />
        <TextView
                android:text="@string/app_about_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appInfoText"
                android:textColor="@color/colorPrimaryText"/>

    </LinearLayout>

</LinearLayout>